--- a/Royal/Blood volume.html
+++ b/Royal/Blood volume.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="menu.css">
 </head>
 <header>
-  <h1> <a href="menu.html">皇族 集英會</a></h1>
+  <h1> <a href="index.html">皇族 集英會</a></h1>
 </header>
 
 <body>
