--- a/Royal/Harding Mission Introduction.html
+++ b/Royal/Harding Mission Introduction.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <header>
-  <h1> <a href="menu.html">皇族 集英會</a></h1>
+  <h1> <a href="index.html">皇族 集英會</a></h1>
 </header>
 
 <body>
