--- a/Royal/Union emblem.html
+++ b/Royal/Union emblem.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <header>
-  <h1> <a href="menu.html">皇族 集英會</a></h1>
+  <h1> <a href="index.html">皇族 集英會</a></h1>
 </header>
 
 <body>
