--- a/Cooking.html
+++ b/Cooking.html
@@ -9,9 +9,9 @@
   <title>料理製作流程</title>
   <link rel="stylesheet" href="menu.css">
   <style>
-    div img {
-      height: 800px;
-      width: auto;
+    img {
+
+      width: 800px;
     }
   </style>
 </head>
@@ -136,8 +136,10 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
     </ul>
   </nav>
 
-  <h2>料理製作流程</h2>
+
   <div>
+    <h2>料理製作流程</h2>
+    <br>
     <img src="Cooking.jpg" alt="料理製作流程_圖片">
   </div>
 </body>
