--- a/Propaganda.html
+++ b/Propaganda.html
@@ -137,11 +137,12 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
     </li>
     </ul>
   </nav>
-  <h2> 血盟宣導：</h2>
+
   <div class="血盟宣導">
-    <p>
-    <ol>
-      <li>本盟成員加入，除了管理員找來的，其餘收成員推薦（本尊），分身不要！！</li>
+    <br>
+    <h2> 血盟宣導：</h2>
+    <ol style="width: 100%;">
+      <li style="width: 100%;">本盟成員加入，除了管理員找來的，其餘收成員推薦（本尊），分身不要！！</li>
       <li>主要角色退群，請告知管理者（小凝，或是春）
         短期可不用退群，出走就退群吧。</li>
       <li>老屁股，我一定是偏袒，誰說都一樣，革命情感，即便短期回不來，我也留他。
@@ -152,7 +153,6 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
     此外請不要對非本盟成員提供答案，要請他來這個盟，一起分享，一起玩。
     以上言論，皆由DC成員討論的一個結果。
     請大家一起遵守，讓盟更歡樂，沒有影射任何人，請不要揣測^^。
-    </p>
   </div>
 </body>
 
