--- a/Special transformation.html
+++ b/Special transformation.html
@@ -8,6 +8,11 @@
   <meta name="description" content="特殊變身">
   <title>特殊變身</title>
   <link rel="stylesheet" href="menu.css">
+  <style>
+    img {
+      width: 1000px;
+    }
+  </style>
 </head>
 <header>
   <h1> <a href="index.html">皇族 集英會</a></h1>
@@ -131,8 +136,10 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
   </nav>
 
 
-  <h2>特殊變身</h2>
+
   <div>
+    <h2>特殊變身</h2>
+    <br>
     <img src="Special transformation.jpg" alt="特殊變身_圖片">
   </div>
 </body>
