--- a/cookbook.html
+++ b/cookbook.html
@@ -9,7 +9,7 @@
   <title>各階段料理效果及取得方式</title>
   <link rel="stylesheet" href="menu.css">
   <style>
-    .a img {
+    img {
       vertical-align: top;
     }
   </style>
@@ -138,10 +138,12 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
 
 
 
-  <h2>各階段料理效果及取得方式</h2>
-  <h3 style="color: orchid;">By 小湊</h3>
 
-  <div class="a">
+
+  <div>
+    <h2>各階段料理效果及取得方式</h2>
+    <h3 style="color: orchid;">By 小湊</h3>
+    <br>
     <img src="cookbook_1.jpg" alt="一階料理_圖片">
     <img src="cookbook_2.jpg" alt="二階料理_圖片">
     <img src="cookbook_3.jpg" alt="三階料理_圖片">
