--- a/fishing.html
+++ b/fishing.html
@@ -9,17 +9,19 @@
   <title>自動釣魚 教學</title>
   <link rel="stylesheet" href="menu.css">
   <style>
-    div {
-      width: 1500px;
-    }
-
     div img {
-      width: 1000px;
+      width: 800px;
       float: right;
     }
 
     p {
       font-size: 20px;
+    }
+
+    .clearfix {
+      width: auto;
+      clear: both;
+      border: solid 0;
     }
   </style>
 </head>
@@ -147,18 +149,21 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
 
 
 
-  <h2>自動釣魚 教學</h2>
+
 
   <div>
+    <h2>自動釣魚 教學</h2>
+    <br>
     <img src="fishing.jpg" alt="自動釣魚 設定_圖片">
-  </div>
-  <p>給不會設定釣魚一個參考</p>
-  <p>解釋一下 LHZ 就是悠風天堂內建喝水程式</p>
-  <p>知道LHZ後 再去皇族LINE</p>
-  <p>記事本下載.連點程式後 就可以開始學 釣魚了</p>
-  <p>最後要看會不會像影片這樣一閃一閃才算成功</p>
-  <a href="https://mega.nz/#!tEhyxbwb!XIhflHZvdmpS9yWbwjhDkEVCKMreLCddVr35mdyjGrc" target="_blank">（連點程式）載點</a>
 
+    <p>給不會設定釣魚一個參考</p>
+    <p>解釋一下 LHZ 就是悠風天堂內建喝水程式</p>
+    <p>知道LHZ後 再去皇族LINE</p>
+    <p>記事本下載.連點程式後 就可以開始學 釣魚了</p>
+    <p>最後要看會不會像影片這樣一閃一閃才算成功</p>
+    <a href="https://mega.nz/#!tEhyxbwb!XIhflHZvdmpS9yWbwjhDkEVCKMreLCddVr35mdyjGrc" target="_blank">（連點程式）載點</a>
+    <div class="clearfix"></div>
+  </div>
 </body>
 
 </html>
