--- a/teamviewer.html
+++ b/teamviewer.html
@@ -9,17 +9,19 @@
   <title>手機遠端天堂</title>
   <link rel="stylesheet" href="menu.css">
   <style>
-    div {
-      width: 1300px;
-    }
-
-    div img {
+    img {
       float: right;
-      width: 1000px;
+      width: 800px;
     }
 
     p {
       font-size: 20px;
+    }
+
+    .clearfix {
+      width: auto;
+      clear: both;
+      border: solid 0;
     }
   </style>
 </head>
@@ -146,14 +148,17 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
 
 
 
-  <h2>手機遠端天堂</h2>
+
   <div>
+    <h2>手機遠端天堂</h2>
+    <br>
     <img src="teamviewer.jpg" alt="手機遠端天堂_圖片">
     <p>手機遠端天堂 </p>
     <p>教學 </p>
     <p> 切記 不要用遠端練功 </p>
     <p>聽說GM會注意.... </p>
     <p>適合拿來開天堂掛龍痕 掛賣 </p>
+    <div class="clearfix"></div>
   </div>
 </body>
 
