--- a/Chistar.html
+++ b/Chistar.html
@@ -137,25 +137,26 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
 
 
 
+  <div>
+    <h2>智多星任務</h2>
+    <br>
+    <p>
+      各位 新手 老手 沒考過的
+    </p>
 
-  <h2>智多星任務</h2>
-  <p>
-    各位 新手 老手 沒考過的
-  </p>
+    <p>關於智多星這點，每日維修後騎村</p>
 
-  <p>關於智多星這點，每日維修後騎村</p>
+    <p>可以找智多星，接任務選第二選項</p>
 
-  <p>可以找智多星，接任務選第二選項</p>
+    <p>想得到寶箱 選第一個</p>
 
-  <p>想得到寶箱 選第一個</p>
-
-  <p>考試流程很簡單，先找到智多星，接任務，之後在去傲慢2∼100樓按找密令指引打怪，等過100樓</p>
-  <p>得到吸飽鮮血的密令後，在找一次智多星，交付任務 以下的各職業加強就會有效果</p>
-  <p>法師 騎士 黑妖 沒得考 。</p>
-
-  <div style="display: inline-block;">
+    <p>考試流程很簡單，先找到智多星，接任務，之後在去傲慢2∼100樓按找密令指引打怪，等過100樓</p>
+    <p>得到吸飽鮮血的密令後，在找一次智多星，交付任務 以下的各職業加強就會有效果</p>
+    <p>法師 騎士 黑妖 沒得考 。</p>
+    <br>
 
     <img src="Chistar.jpg" .jpg" alt="智多星任務_圖片">
+
   </div>
 </body>
 
