--- a/Dragon Key.html
+++ b/Dragon Key.html
@@ -9,7 +9,7 @@
   <title>龍之鑰匙</title>
   <link rel="stylesheet" href="menu.css">
   <style>
-    .a img {
+    img {
       width: auto;
       height: 500px;
     }
@@ -142,15 +142,16 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
 
 
 
-
-  <h2>龍之鑰匙</h2>
-  <p>怎麼取得龍鑰？</p>
-  <p>在威頓村有個'多魯嘉貝爾'，位子在村莊下面出口...</p>
-  <p>對話⋯⋯我願意跟隨你一起.購買多魯嘉的袋子（10萬）</p>
-  <p>可以開30次，內容物豐富絕對超過10萬價值</p>
-  <p>24h可開一次，</p>
-  <p>所以在麻煩大家多多幫忙囉，多開幾個帳號賺錢吧</p>
-  <div class="a">
+  <div>
+    <h2>龍之鑰匙</h2>
+    <br>
+    <p>怎麼取得龍鑰？</p>
+    <p>在威頓村有個'多魯嘉貝爾'，位子在村莊下面出口...</p>
+    <p>對話⋯⋯我願意跟隨你一起.購買多魯嘉的袋子（10萬）</p>
+    <p>可以開30次，內容物豐富絕對超過10萬價值</p>
+    <p>24h可開一次，</p>
+    <p>所以在麻煩大家多多幫忙囉，多開幾個帳號賺錢吧</p>
+    <br>
     <img src="Dragon Key.jpg" alt="龍之鑰匙_圖片">
   </div>
 </body>
