--- a/Jewelry effect.html
+++ b/Jewelry effect.html
@@ -9,10 +9,6 @@
   <title>飾品 各階級效果</title>
   <link rel="stylesheet" href="menu.css">
   <style>
-    .a {
-      width: 1500px;
-    }
-
     .a img {
       float: right;
       margin: 20px;
@@ -22,6 +18,14 @@
 
     div {
       font-size: 20px;
+    }
+
+    .clearfix {
+      width: auto;
+      clear: both;
+      border: 0;
+      margin: 0;
+      padding: 0;
     }
   </style>
 </head>
@@ -149,9 +153,10 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
 
 
 
-  <h2>飾品 各階級效果 </h2>
-  <div class="a">
 
+  <div class="a">
+    <h2>飾品 各階級效果 </h2>
+    <br>
     <img src="Jewelry effect.jpg" alt="飾品 各階級效果_圖片">
     <p>飾品說明：</p>
     <p> 用飾品卷軸去衝+6</p>
@@ -163,6 +168,7 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
     <p> 怎麼知道你的飾品是那種</p>
     <p> 善用鑑定卷軸...</p>
     <p> 目前知道新手戒子/耳環雖然屬於初階但是不能衝...也有某部分不能衝...善用googel</p>
+    <div class="clearfix"></div>
 
   </div>
 </body>
