--- a/Magic defense.html
+++ b/Magic defense.html
@@ -13,24 +13,29 @@
       font-size: 20px;
     }
 
+
+    .warp {
+
+      width: auto;
+      border: solid 0;
+      margin: 0;
+      padding: 0;
+    }
+
     .a {
-      display: inline-block;
-
+      float: left;
+      width: auto;
+      border: solid 0;
+      margin: 0;
+      padding: 10;
     }
 
-    .b {
-      display: inline-block;
-      margin-left: 50px;
-    }
-
-    .c {
-      display: inline-block;
-      margin-left: 50px;
-    }
-
-    .d {
-      display: inline-block;
-      margin-left: 50px;
+    .clearfix {
+      width: auto;
+      clear: both;
+      border: solid 0;
+      margin: 0;
+      padding: 0;
     }
   </style>
 </head>
@@ -154,8 +159,10 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
     </li>
     </ul>
   </nav>
-  <h2>魔法防禦統計</h2>
+
   <div class="魔法防禦統計">
+    <h2>魔法防禦統計</h2>
+    <br>
     <h3 style="color: red;">【1】職業基本魔防：</h3>
     【王族：10%】 【騎士0%】 【妖精25%】 【法師15%】 【黑妖10%】【龍騎士18%】【幻術士20%】
     <h3 style="color: rosybrown;">【2】精神對應魔防：</h3>
@@ -176,61 +183,65 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
     <p>本身精神+初始抗魔值=答案 等級/2算出來的答案2個相+=總答案</p>
     <p> PS：初始有點『精神』的各位也要把點數算進去不然會跟你算的不符合唷</p>
     <h3 style="color: seagreen;">【4】【等級+精神 空身抗魔 騎士版Lv.50~80】</h3>
-  </div>
-  <div class="a">
-    <h3>等級50</h3>
-    <p>精神15+03%=抗魔28</p>
-    <p>精神16+03%=抗魔28</p>
-    <p>精神17+06%=抗魔31</p>
-    <p>精神18+10%=抗魔35</p>
-    <p>精神19+15%=抗魔40</p>
-    <p>精神20+21%=抗魔46</p>
-    <p>精神21+28%=抗魔53</p>
-    <p>精神22+37%=抗魔62</p>
-    <p>精神23+47%=抗魔72</p>
-    <p>精神24+50%=抗魔75</p>
-  </div>
-  <div class="b">
-    <h3>等級60</h3>
 
-    <p>精神15+03%=抗魔33</p>
-    <p>精神16+03%=抗魔33</p>
-    <p>精神17+06%=抗魔36</p>
-    <p>精神18+10%=抗魔40</p>
-    <p>精神19+15%=抗魔45</p>
-    <p>精神20+21%=抗魔51</p>
-    <p>精神21+28%=抗魔58</p>
-    <p>精神22+37%=抗魔67</p>
-    <p>精神23+47%=抗魔77</p>
-    <p>精神24+50%=抗魔80</p>
-  </div>
-  <div class="c">
-    <h3>等級70</h3>
+    <div class="warp">
+      <div class="a">
+        <h3>等級50</h3>
+        <p>精神15+03%=抗魔28</p>
+        <p>精神16+03%=抗魔28</p>
+        <p>精神17+06%=抗魔31</p>
+        <p>精神18+10%=抗魔35</p>
+        <p>精神19+15%=抗魔40</p>
+        <p>精神20+21%=抗魔46</p>
+        <p>精神21+28%=抗魔53</p>
+        <p>精神22+37%=抗魔62</p>
+        <p>精神23+47%=抗魔72</p>
+        <p>精神24+50%=抗魔75</p>
+      </div>
+      <div class="a">
+        <h3>等級60</h3>
 
-    <p>精神15+03%=抗魔38</p>
-    <p>精神16+03%=抗魔38</p>
-    <p>精神17+06%=抗魔41</p>
-    <p>精神18+10%=抗魔45</p>
-    <p>精神19+15%=抗魔50</p>
-    <p>精神20+21%=抗魔56</p>
-    <p>精神21+28%=抗魔63</p>
-    <p>精神22+37%=抗魔72</p>
-    <p>精神23+47%=抗魔82</p>
-    <p>精神24+50%=抗魔85</p>
-  </div>
-  <div class="d">
-    <h3>等級80</h3>
+        <p>精神15+03%=抗魔33</p>
+        <p>精神16+03%=抗魔33</p>
+        <p>精神17+06%=抗魔36</p>
+        <p>精神18+10%=抗魔40</p>
+        <p>精神19+15%=抗魔45</p>
+        <p>精神20+21%=抗魔51</p>
+        <p>精神21+28%=抗魔58</p>
+        <p>精神22+37%=抗魔67</p>
+        <p>精神23+47%=抗魔77</p>
+        <p>精神24+50%=抗魔80</p>
+      </div>
+      <div class="a">
+        <h3>等級70</h3>
 
-    <p>精神15+03%=抗魔=43</p>
-    <p>精神16+03%=抗魔=43</p>
-    <p>精神17+06%=抗魔=46</p>
-    <p>精神18+10%=抗魔=50</p>
-    <p>精神19+15%=抗魔=55</p>
-    <p>精神20+21%=抗魔=61</p>
-    <p>精神21+28%=抗魔=68</p>
-    <p>精神22+37%=抗魔=77</p>
-    <p>精神23+47%=抗魔=87</p>
-    <p>精神24+50%=抗魔=90</p>
+        <p>精神15+03%=抗魔38</p>
+        <p>精神16+03%=抗魔38</p>
+        <p>精神17+06%=抗魔41</p>
+        <p>精神18+10%=抗魔45</p>
+        <p>精神19+15%=抗魔50</p>
+        <p>精神20+21%=抗魔56</p>
+        <p>精神21+28%=抗魔63</p>
+        <p>精神22+37%=抗魔72</p>
+        <p>精神23+47%=抗魔82</p>
+        <p>精神24+50%=抗魔85</p>
+      </div>
+      <div class="a">
+        <h3>等級80</h3>
+
+        <p>精神15+03%=抗魔=43</p>
+        <p>精神16+03%=抗魔=43</p>
+        <p>精神17+06%=抗魔=46</p>
+        <p>精神18+10%=抗魔=50</p>
+        <p>精神19+15%=抗魔=55</p>
+        <p>精神20+21%=抗魔=61</p>
+        <p>精神21+28%=抗魔=68</p>
+        <p>精神22+37%=抗魔=77</p>
+        <p>精神23+47%=抗魔=87</p>
+        <p>精神24+50%=抗魔=90</p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
   </div>
 </body>
 
