--- a/Rebirth reward.html
+++ b/Rebirth reward.html
@@ -137,71 +137,74 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
   </nav>
 
 
+  <div>
+    <h2>轉身獎勵</h2>
+    <br>
+    <p> 一開始都是0轉，</p>
+    <p> 0轉練到99級可去古魯丁附近的莊園，</p>
+    <p> 找NPC可獲得獎勵(轉世靈戒)，</p>
+    <p> 領完等級變成1轉10級。</p>
 
-  <h2>轉身獎勵</h2>
-  <p> 一開始都是0轉，</p>
-  <p> 0轉練到99級可去古魯丁附近的莊園，</p>
-  <p> 找NPC可獲得獎勵(轉世靈戒)，</p>
-  <p> 領完等級變成1轉10級。</p>
+    <h3>《1轉》: 玩家【】已釋放靈魂的能量達成修練</h3>
+    <p> 物理系:攻擊+3、全屬抗30、額外10%血魔</p>
 
-  <h3>《1轉》: 玩家【】已釋放靈魂的能量達成修練</h3>
-  <p> 物理系:攻擊+3、全屬抗30、額外10%血魔</p>
+    <p> 法術系:魔法攻擊+2、全屬抗30、額外10%血魔</p>
 
-  <p> 法術系:魔法攻擊+2、全屬抗30、額外10%血魔</p>
+    <h3>《2轉》: 玩家【】已再次釋放達到靈魂的巔峰</h3>
+    <p> 物理系:攻擊+3、全屬抗40、額外15%血魔、10%機率所有傷害減半、可變身轉世系列</p>
 
-  <h3>《2轉》: 玩家【】已再次釋放達到靈魂的巔峰</h3>
-  <p> 物理系:攻擊+3、全屬抗40、額外15%血魔、10%機率所有傷害減半、可變身轉世系列</p>
+    <p> 法術系:魔法攻擊+2、全屬抗40、額外15%血魔、10%機率所有傷害減半、可變身轉世系列</p>
 
-  <p> 法術系:魔法攻擊+2、全屬抗40、額外15%血魔、10%機率所有傷害減半、可變身轉世系列</p>
+    <h3>《3轉》:玩家【】已轉化靈魂而獲得昇華的能量</h3>
 
-  <h3>《3轉》:玩家【】已轉化靈魂而獲得昇華的能量</h3>
+    <p> 物理系：血魔增加20%，攻擊力+6，全屬性抗40，</p>
 
-  <p> 物理系：血魔增加20%，攻擊力+6，全屬性抗40，</p>
+    <p> 可變身轉世系列</p>
 
-  <p> 可變身轉世系列</p>
+    <p> 10%機率減半所有傷害，</p>
 
-  <p> 10%機率減半所有傷害，</p>
+    <p> 10%機率增加所有造成的傷害20%</p>
 
-  <p> 10%機率增加所有造成的傷害20%</p>
+    <p> 法術系：:血魔增加20%，魔攻+3，全屬性抗40，</p>
 
-  <p> 法術系：:血魔增加20%，魔攻+3，全屬性抗40，</p>
+    <p> 魔法命中率提升，</p>
 
-  <p> 魔法命中率提升，</p>
+    <p> 可變身轉世系列</p>
 
-  <p> 可變身轉世系列</p>
+    <p> 10%機率減半所有傷害，</p>
 
-  <p> 10%機率減半所有傷害，</p>
+    <p> 10%機率增加所有造成的傷害20%</p>
 
-  <p> 10%機率增加所有造成的傷害20%</p>
+    <h3>《四轉》:玩家【】已由修練中領悟獲得英雄之力</h3>
 
-  <h3>《四轉》:玩家【】已由修練中領悟獲得英雄之力</h3>
+    <p>物理系：血魔增加20%，攻擊力+9，全屬性抗50，</p>
 
-  <p>物理系：血魔增加20%，攻擊力+9，全屬性抗50，</p>
+    <p>10%機率減半所有傷害，</p>
 
-  <p>10%機率減半所有傷害，</p>
+    <p>10%機率增加所有造成的傷害20%</p>
 
-  <p>10%機率增加所有造成的傷害20%</p>
+    <p>可變身英雄變身</p>
 
-  <p>可變身英雄變身</p>
+    <p>法術系：:血魔增加20%，魔攻+4，全屬性抗50，</p>
 
-  <p>法術系：:血魔增加20%，魔攻+4，全屬性抗50，</p>
+    <p>魔法命中率提升，</p>
 
-  <p>魔法命中率提升，</p>
+    <p>10%機率減半所有傷害，</p>
 
-  <p>10%機率減半所有傷害，</p>
+    <p>10%機率增加所有造成的傷害20%</p>
 
-  <p>10%機率增加所有造成的傷害20%</p>
+    <p>可變身英雄變身，</p>
 
-  <p>可變身英雄變身，</p>
+    <h3>【備註】</h3>
+    <p>法術系是指「魔法師與幻術師」，</p>
 
-  <h3>【備註】</h3>
-  <p>法術系是指「魔法師與幻術師」，</p>
+    <p>魔法命中率提升方式是比例提升</p>
 
-  <p>魔法命中率提升方式是比例提升</p>
+    <p>也就是4轉提升4次魔法命中率。</p>
 
-  <p>也就是4轉提升4次魔法命中率。</p>
-
-  <p>例如一轉+5%，二轉+10%，三轉+15%，四轉+20</p>
+    <p>例如一轉+5%，二轉+10%，三轉+15%，四轉+20</p>
+  </div>
 </body>
+
 
 </html>
