--- a/Weapon attributes.html
+++ b/Weapon attributes.html
@@ -8,6 +8,12 @@
   <meta name="description" content="武器屬性強化">
   <title>武器屬性強化</title>
   <link rel="stylesheet" href="menu.css">
+  <style>
+    img {
+      width: 900px;
+    }
+  </style>
+
 </head>
 <header>
   <h1> <a href="index.html">皇族 集英會</a></h1>
@@ -132,8 +138,10 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
 
 
 
-  <h2>武器屬性強化</h2>
+
   <div>
+    <h2>武器屬性強化</h2>
+    <br>
     <img src="Weapon attributes.jpg" alt="武器屬性強化_圖片">
   </div>
 </body>
