--- a/arms.html
+++ b/arms.html
@@ -8,6 +8,12 @@
   <meta name="description" content="武器強化效果 (+0~+14)">
   <title>武器強化效果 (+0~+14)</title>
   <link rel="stylesheet" href="menu.css">
+
+  <style>
+    img {
+      width: 900px;
+    }
+  </style>
 </head>
 <header>
   <h1> <a href="index.html">皇族 集英會</a></h1>
@@ -133,8 +139,10 @@ bsn=00842&snB=4533550" target="_blank">藥水的延遲時間</a></li>
 
 
 
-  <h2>武器強化效果 (+0~+14)</h2>
+
   <div>
+    <h2>武器強化效果 (+0~+14)</h2>
+    <br>
     <img src="arms.jpg" alt="武器強化效果 (+0~+14)_圖片">
   </div>
 </body>
